# STM32-Zephyr

./: README.md  sample.yaml
i2c_aht10/: CMakeLists.txt  README.md  README.rst
i2c_aht10/boards/: blackpill_f411ce.overlay
i2c_aht10/src/: main.c
i2c_aht10_led/: CMakeLists.txt  README.md  prj.conf
i2c_aht10_led/boards/: blackpill_f411ce.overlay
i2c_aht10_led/src/: main.c
i2c_scan/: README.md  README.rst  prj.conf
src/: main.c
